# MusicDatabaseManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  ss.pro
src/: android_compat.cpp  android_compat.h  app.cpp  app.h  cli.cpp  cli.h  config.h  gui.cpp  gui.h  helper_func.c  helper_func.h  library.cpp  library.h  networking.cpp  networking.h  networking_android.cpp  sys_headers.h
